--- a/C5_ex.css
+++ b/C5_ex.css
@@ -7,7 +7,6 @@
 header {
   width: 100%;
   padding: 20px 0;
-  background-color: red;
   text-align: center;
 }
 
@@ -17,7 +16,6 @@ header {
   margin: 0 auto;
   border-bottom: 1px solid #848282;
   border-top: 1px solid #848282;
-  background-color: orange;
 }
 
 .nav-list-item {
@@ -103,4 +101,17 @@ header {
   width: 200px;
   height: 200px;
   background-color: #8eb8ff;
+}
+
+footer {
+  width: 100%;
+  height: 120px;
+  text-align: center;
+  line-height: 120px;
+  background-color: #848282;
+
+}
+
+.footer-text {
+  color: #fff;
 }
